--- a/style.scss
+++ b/style.scss
@@ -13,7 +13,7 @@ body {
     width: 40vw;
     height: fit-content;
 
-    margin: 100px auto 0;
+    margin: 50px auto 0;
     padding: 40px;
 
     color: #f2f2f2;
@@ -120,4 +120,25 @@ body {
 
 #button:active {
     box-shadow: 0 0 0 1000px #0003 inset;
+}
+
+.result {
+    width: fit-content;
+    max-width: 40vw;
+    max-height: 1000px;
+
+    display: grid;
+
+    padding: z0px;
+    margin: 30px auto;
+
+    background-color: #000;
+    color: #fff;
+}
+
+.password {
+    margin: 10px;
+    padding: 15px;
+
+    outline: solid 1px #fff;
 }
