--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ body {
   margin: 10px;
   padding: 15px;
   outline: solid 1px #fff;
+  user-select: all;
 }
 
 /*# sourceMappingURL=style.css.map */
