--- a/style.css
+++ b/style.css
@@ -182,14 +182,40 @@ body {
 }
 @media screen and (max-width: 500px) {
   .wrapper {
-    width: calc(100vw - 40px);
-    box-sizing: border-box;
+    width: calc(100vw - 20px);
     margin: 10px;
+    padding: 20px;
   }
 
   .result {
     box-sizing: border-box;
-    max-width: calc(100vw - 40px);
+    max-width: calc(100vw - 20px);
+  }
+}
+@media screen and (max-width: 360px) {
+  h2 {
+    font-size: 1.25rem;
+  }
+
+  .wrapper {
+    padding: 10px;
+  }
+  .wrapper h1 {
+    margin-bottom: 5px;
+    font-size: 1.5rem;
+  }
+
+  .input p, p {
+    font-size: 1rem;
+  }
+
+  .result {
+    box-sizing: border-box;
+    max-width: calc(100vw - 20px);
+  }
+
+  #button {
+    width: 60%;
   }
 }
 
