--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ body {
   }
 }
 @media screen and (max-width: 730px) {
+  h2 {
+    font-size: 1.25rem;
+  }
+
   .checkInput {
     width: 100%;
   }
@@ -183,6 +187,11 @@ body {
   }
 }
 @media screen and (max-width: 500px) {
+  h2 {
+    font-size: 1rem;
+    word-wrap: break-word;
+  }
+
   .wrapper {
     width: calc(100vw - 20px);
     margin: 10px;
@@ -195,10 +204,6 @@ body {
   }
 }
 @media screen and (max-width: 360px) {
-  h2 {
-    font-size: 1.25rem;
-  }
-
   .wrapper {
     padding: 10px;
   }
@@ -212,17 +217,23 @@ body {
     border-radius: 5px;
   }
 
-  .input p, p {
+  .input p,
+p {
     font-size: 1rem;
-  }
-
-  .result {
-    box-sizing: border-box;
-    max-width: calc(100vw - 20px);
   }
 
   #button {
     width: 60%;
+  }
+
+  .result div {
+    margin: 5px;
+    border-radius: 5px;
+  }
+  .result div h2 {
+    margin: 3px;
+    padding: 5px;
+    border-radius: 2px;
   }
 }
 
